--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,11 @@
-<nav class= "bg-gray-800">
-    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+<nav class="w-full">
+    <div class="glass p-5">
+        <div class="flex items-center justify-between">
+            <span class="text-2xl text-slate-500 font-semibold">Smart Travel</span>
+            <div className="flex space-x-4 text-gray-900">
+                <span class="text-xl text-gray-900 font-semibold">{{username}}</span>
+            </div>
+        </div>
         
-</div>
+    </div>
 </nav>
