--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -9,7 +9,7 @@
                     {{data.services}}
                 </div>
                 <div>
-                    <button class="bg-slate-300 text-black p-1 rounded font-semibold">
+                    <button class="hover:bg-slate-300 text-white p-1 rounded font-semibold" (click)="bookNow()">
                         Book Now
                     </button>
                 </div>
