--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,36 @@
 <div>
     <app-nav-bar></app-nav-bar>
     <div class="grid sm:grid-cols-3 grid-cols-1 gap-4 p-10 mt-10">
-            <app-cards *ngFor="let card of cards" [data]="card"></app-cards>
+        <app-cards *ngFor="let card of cards" [data]="card"></app-cards>
     </div>
+    <footer class="bg-transparent rounded-lg m-4">
+        <div class="w-full max-w-screen-xl mx-auto p-2 md:py-8">
+            <div class="sm:flex sm:items-center sm:justify-between">
+                <a href="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                    <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" /> -->
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">Smart
+                        Travel</span>
+                </a>
+                <ul class="flex flex-wrap items-center mb-6 text-sm font-bold text-black">
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                    </li>
+                    <li>
+                        <a class="hover:underline">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" /> -->
+            <span class="block text-sm text-black font-bold">© 2025 <a href="https://flowbite.com/"
+                    class="hover:underline">Smart Travel™</a>. All Rights Reserved.</span>
+        </div>
+    </footer>
+
+
 </div>
