--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,8 +2,9 @@
     <div class="glass p-5">
         <div class="flex items-center justify-between">
             <span class="text-2xl text-slate-500 font-semibold">Smart Travel</span>
-            <div className="flex space-x-4 text-gray-900">
-                <span class="text-xl text-gray-900 font-semibold">{{username}}</span>
+            <div class="flex flex-row items-center justify-between gap-4 mr-4">
+                <i class="fa-solid fa-user fa-xl"></i>               
+                <span class="text-slate-700 text-lg font-semibold">{{username}}</span>
             </div>
         </div>
         
