bookings form & table

--- a/src/app/components/bookings/bookings.component.html
+++ b/src/app/components/bookings/bookings.component.html
@@ -3,7 +3,7 @@
         <div class="w-full text-center mt-5">
             <h2 class="text-2xl font-bold text-black">Booking</h2>
         </div>
-        <form class="flex flex-col justify-center gap-5 p-10">
+        <form class="flex flex-col justify-center gap-5 p-10" [formGroup]="bookingForm">
             <div class="flex flex-row gap-3">
                 <label class="py-2 text-sm font-bold">Mode of transport: </label>
                 <ul class="items-center w-full flex flex-row rounded-lg">
@@ -46,51 +46,22 @@
             <div class="flex flex-row gap-10">
                 <div class="flex flex-row gap-3">
                     <label class="py-2 text-sm font-bold">Source: </label>
-                    <select class="py-2 text-sm rounded-lg bg-transparent border-b-2">
-                        <option
+                    <select class="py-2 text-sm rounded-lg bg-transparent border-b-2" formControlName="sourceCountry">
+                        <option disabled value="null">Select</option>
+                        <option *ngFor="let ele of city" [ngValue]="ele"
                             class="block px-4 py-2w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Select
-                        </option>
-                        <option
-                            class="block px-4 py-2w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Flight
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Train
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Bus
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Cab/Taxi
+                            {{ ele }}
                         </option>
                     </select>
                 </div>
                 <div class="flex flex-row gap-3">
                     <label class="py-2 text-sm font-bold">Destination: </label>
-                    <select class="py-2 text-sm w-1/2 rounded-lg bg-transparent border-b-2">
-                        <option
+                    <select class="py-2 text-sm w-1/2 rounded-lg bg-transparent border-b-2"
+                        formControlName="destCountry">
+                        <option disabled value="null">Select</option>
+                        <option *ngFor="let ele of city" [ngValue]="ele"
                             class="block px-4 py-2w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Select
-                        </option>
-                        <option
-                            class="block px-4 py-2w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Flight
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Train
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Bus
-                        </option>
-                        <option
-                            class="block px-4 py-2 w-11/12 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                            Cab/Taxi
+                            {{ele}}
                         </option>
                     </select>
                 </div>
@@ -100,13 +71,14 @@
                 <label class="py-2 text-sm font-bold">Choose Date: </label>
                 <div class="relative max-w-sm ">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-4 h-4 text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
                         </svg>
                     </div>
                     <input datepicker id="default-datepicker" type="text"
+                    formControlName="datepicker"
                         class="border-b-2  text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 bg-transparent placeholder:text-black"
                         placeholder="Select date">
                 </div>
@@ -114,7 +86,9 @@
             <div class="flex flex-row gap-3">
                 <label class="py-2 text-sm font-bold">No of persons: </label>
                 <input class="py-2 text-sm w-1/2 rounded-lg bg-transparent border-b-2 placeholder:text-black"
-                    type="number" placeholder="Enter number" />
+                    type="number" placeholder="Enter number"
+                    id="persons"
+                    formControlName="persons" />
             </div>
 
             <button class="rounded-lg py-2 bg-slate-800 text-white mt-4">
@@ -124,4 +98,116 @@
         </form>
     </div>
 
+</div>
+
+
+<div class="w-full flex justify-center shadow-lg">
+    <table class="w-10/12 text-sm text-left bg-transparent glass rounded-lg">
+        <!-- <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                    Product name
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Color
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Category
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Price
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Action
+                </th>
+            </tr>
+        </thead> -->
+        <tbody class="">
+            <tr class="bg-transparent border-spacing-5 shadow-lg">
+                <th scope="row" class="px-6 py-4 font-medium text-black whitespace-nowrap">
+                    Apple MacBook Pro 17"
+                </th>
+                <td class="px-6 py-4">
+                    Silver
+                </td>
+                <td class="px-6 py-4 font-bold">
+                    Laptop
+                </td>
+                <td class="px-6 py-4 font-bold">
+                    $2999
+                </td>
+                <td class="px-6 py-4">
+                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+            <tr class="bg-transparent border-spacing-5 border-black-700 shadow-lg">
+                <th scope="row" class="px-6 py-4 font-medium text-black whitespace-nowrap">
+                    Microsoft Surface Pro
+                </th>
+                <td class="px-6 py-4">
+                    White
+                </td>
+                <td class="px-6 py-4">
+                    Laptop PC
+                </td>
+                <td class="px-6 py-4">
+                    $1999
+                </td>
+                <td class="px-6 py-4">
+                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+            <tr class="bg-transparent border-spacing-5 border-black-700 shadow-lg">
+                <th scope="row" class="px-6 py-4 font-medium text-black whitespace-nowrap">
+                    Magic Mouse 2
+                </th>
+                <td class="px-6 py-4">
+                    Black
+                </td>
+                <td class="px-6 py-4">
+                    Accessories
+                </td>
+                <td class="px-6 py-4">
+                    $99
+                </td>
+                <td class="px-6 py-4">
+                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+            <tr class="bg-transparent border-spacing-5 border-black-700 shadow-lg">
+                <th scope="row" class="px-6 py-4 font-medium text-black whitespace-nowrap">
+                    Google Pixel Phone
+                </th>
+                <td class="px-6 py-4">
+                    Gray
+                </td>
+                <td class="px-6 py-4">
+                    Phone
+                </td>
+                <td class="px-6 py-4">
+                    $799
+                </td>
+                <td class="px-6 py-4">
+                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+            <tr class="bg-transparent border-spacing-5 border-black-700 shadow-lg">
+                <th scope="row" class="px-6 py-4 font-medium text-black whitespace-nowrap">
+                    Apple Watch 5
+                </th>
+                <td class="px-6 py-4">
+                    Red
+                </td>
+                <td class="px-6 py-4">
+                    Wearables
+                </td>
+                <td class="px-6 py-4">
+                    $999
+                </td>
+                <td class="px-6 py-4">
+                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
